# cppChan

./: .gitignore  CMakeLists.txt  LICENSE.MIT  README.md  atomic_channel.hh  channel.hh  cppChan.pro  deps  ideas  main.cc  qmake.pro
tests/: test_channel.cc
